[package]
name = "loja"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-recursion = "1.1.1"
atoi = "2.0.0"
bytes = "1.9.0"
clap = { version = "4.5.24", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["test-util"] }
tokio-test = "0.4.4"
tracing-test = "0.2.5"
