[package]
name = "loja"
version = "0.1.0"
edition = "2021"
description = "A simple Redis Server and Client implemented in Rust"
repository = "https://github.com/paulora2405/loja-rs"
authors = ["Paulo Albuquerque <paulora2405@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["redis", "server", "client", "resp", "key-value"]
categories = [
    "asynchronous",
    "caching",
    "database-implementations",
    "network-programming",
    "command-line-utilities",
]

[dependencies]
anyhow = "1.0.95"
async-recursion = "1.1.1"
atoi = "2.0.0"
bytes = "1.9.0"
clap = { version = "4.5.24", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["test-util"] }
tokio-test = "0.4.4"
tracing-test = "0.2.5"
